WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
270312
UnifiedPDF: Print buttons in PDFs don't work
https://bugs.webkit.org/show_bug.cgi?id=270312
Summary
UnifiedPDF: Print buttons in PDFs don't work
Tim Horton
Reported
2024-02-29 12:32:27 PST
UnifiedPDF: Print buttons in PDFs don't work
Attachments
Add attachment
proposed patch, testcase, etc.
Tim Horton
Comment 1
2024-02-29 12:32:37 PST
<
rdar://problem/123850236
>
Tim Horton
Comment 2
2024-02-29 12:34:41 PST
Pull request:
https://github.com/WebKit/WebKit/pull/25311
EWS
Comment 3
2024-02-29 13:54:58 PST
Committed
275513@main
(a7b6ae613dcf): <
https://commits.webkit.org/275513@main
> Reviewed commits have been landed. Closing PR #25311 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug