UnifiedPDF: Print buttons in PDFs don't work https://bugs.webkit.org/show_bug.cgi?id=270312 rdar://123850236

Reviewed by Abrar Rahman Protyasha.

* Source/WebKit/WebProcess/Plugins/PDF/UnifiedPDF/UnifiedPDFPlugin.mm:
(WebKit::UnifiedPDFPlugin::handlePDFActionForAnnotation):
Implement the print action, and demote this assertion to a log, since we don't implement all actions knowingly.

Canonical link: https://commits.webkit.org/275513@main